2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  doc/sdccman.lyx,
	  .version:
	  Remove profiling support.

2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Rematerialization of stack locations.

2021-11-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Preparations for the rematerialization of stack locations.

2021-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/atomic_flag_clear.c:
	  Fix handling of atomic_flag with clear state 1.

2021-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c:
	  Improve rematerialization of stack addresses.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/tinyaes.c:
	  AES regression test.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdatomic.h,
	  device/lib/tlcs90/atomic_flag_test_and_set.s,
	  device/lib/atomic_flag_clear.c:
	  Improve atomic_flag using TLCS-90 test-and-set instruction.
	* sdas/astlcs90/t90.h,
	  sdas/astlcs90/t90mch.c,
	  sdas/astlcs90/t90pst.c:
	  Support tset.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve use of ldw for 8-bit assignment.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/makebin/makebin.c:
	  Fix buffer overflow, patch #400 by bbbbbr.

2021-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/makebin/makebin.c:
	  Option for logo omission, patch #395 by bbbbbr.

2021-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in cost handling for large functions.

2021-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Peephole rule refactoring inspired by fix to a bug found by roybaer.

2021-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/_divulong.s,